# rss-reader-next

./: .gitignore
rss-reader-frontend/: package.json  pnpm-lock.yaml
rss-reader-frontend/src/: middleware.ts
rss-reader-frontend/src/components/: feeds.tsx  rawFeed.tsx
rss-reader-frontend/src/components/FeedContent/: feedContent.tsx
rss-reader-frontend/src/components/Filter/: filter.tsx
rss-reader-frontend/src/pages/: _app.tsx  index.tsx
rss-reader-frontend/src/pages/admin/: Admin.css  index.tsx
rss-reader-frontend/src/styles/: globals.css
rss-reader-frontend/src/types/: next-auth.d.ts
rss-reader-server/: Cargo.toml
rss-reader-server/bruno/: Add Feed.bru  Get Feeds.bru  bruno.json
rss-reader-server/src/: feeds.db  main.rs
rss-reader-server/src/db/: cache.rs  feeds.rs  mod.rs
rss-reader-server/src/feeds/: fetch.rs  mod.rs  parse.rs
rss-reader-server/src/server/: server.rs
rss-reader-service/: .gitignore  Cargo.toml  TODO.md
rss-reader-service/.shuttle/: config.toml
rss-reader-service/bruno/: Create Feed.bru  Delete Feed.bru  Get RSS Feeds.bru  Get Raw Feeds.bru
rss-reader-service/bruno/Admin/: Batch Create Feeds.bru  Create Feed.bru  Delete Feed.bru  Get Raw Feeds.bru
rss-reader-service/bruno/Auth/: Get GitHub Access Token.bru  Get GitHub User.bru
rss-reader-service/bruno/environments/: RSS Reader ENV.bru
rss-reader-service/src/: main.rs
rss-reader-service/src/auth/: auth.rs  authorization.rs  mod.rs
rss-reader-service/src/db/: cache.rs  feeds.rs  mod.rs
rss-reader-service/src/service/: atom.rs  cache.rs  feeds.rs  mod.rs  rss.rs  xml.rs
(+6 files in other folders)
