[package]
name = "rss-reader-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
quickxml_to_serde = "0.6.0"
reqwest = { version = "0.12.4", features = ["json"] }
rss = "2.0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
