[package]
name = "rss-reader-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.38"
quickxml_to_serde = "0.6.0"
reqwest = { version = "0.12.7", features = ["json"] }
rss = "2.0.8"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.125"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
